2003-09-02  Glenn Morris  <gmorris@ast.cam.ac.uk>

	* calendar/diary-lib.el (diary-header-line-flag)
	(diary-header-line-format): New variables.
	(list-diary-entries): Use them to set header line in simple diary.

	* progmodes/sh-script.el (sh-font-lock-keywords): Use something
	other than font-lock-string-face to highlight backslashes.

2003-09-01  Jason Rumney  <jasonr@gnu.org>

	* international/titdic-cnv.el (tit-read-key-value): Include \r in
	regexp.

2003-09-01  Dave Love  <fx@gnu.org>

	* mouse.el (mouse-popup-menubar, mouse-skip-word): Doc fix.

	* menu-bar.el (menu-bar-showhide-menu): Amend date and time label
	and :help; also line and column numbers labels.

	* international/mule-util.el (char-displayable-p): Moved from
	latin1-disp, renamed and autoloaded.

	* international/latin1-disp.el (latin1-char-displayable-p): Now
	obsolete alias.  Replace uses with char-displayable-p.
	(latin1-display-ucs-per-lynx): Fix last change.

	* international/mule-cmds.el (standard-display-european-internal):
	Don't use char code for Latin-1 NBSP.
	<XFree86 4>: Unfrob NBSP display table.  Set display table to use
	U+2018, U+2019 for `'.
	(select-safe-coding-system): Message fix.

2003-09-01  Kenichi Handa  <handa@m17n.org>

	* international/fontset.el (setup-default-fontset): For Thai
	font, specify "*" family.

2003-09-01  Kevin Rodgers <ihs_4664@yahoo.com>  (tiny change)

	* progmodes/compile.el (previous-error): Accept a prefix
	argument, similarly to next-error.

2003-08-31  Masatake YAMATO  <jet@gyve.org>

	* pcvs.el (cvs-do-removal): Use = instead of eq to check
	the numbre of files. Bind the numbre of files to a a local
	variable. Suggestd by Kevin Rodgers <ihs_4664@yahoo.com>.

2003-08-30  Eli Zaretskii  <eliz@elta.co.il>

	* vc-hooks.el (vc-make-version-backup): Fix the change made on
	2003-07-26: msdos-long-file-names is a function, not a variable.

2003-08-29  Richard M. Stallman  <rms@gnu.org>

	* mail/sendmail.el (sendmail-sync-aliases, mail-setup): 